--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    /* --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
     --card: 0 0% 100%;
@@ -42,7 +42,7 @@
     --accent-foreground: 222.2 47.4% 11.2%;
 
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive-foreground: 210 40% 98%; */
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
@@ -51,7 +51,7 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  /* .dark {
     --background: 202, 23%, 16%;
     --foreground: 210 40% 98%;
 
@@ -79,9 +79,9 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
-  }
+  } */
 }
-
+/* 
 @layer base {
   * {
     @apply border-border;
@@ -89,4 +89,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
